--- a/HT/HT/HT.csproj
+++ b/HT/HT/HT.csproj
@@ -17,10 +17,16 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="Content\KenttaPalikka.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Content\Lumiukko1.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="Content\Lumiukko2.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Content\uggo.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
